# bovpn-backend/models/userModels.js
@@ -3,7 +3,7 @@ const mongoose = require('mongoose');
 const userSchema = new mongoose.Schema({
   username: { type: String, required: true },
   email: { type: String, required: true, unique: true },
-  subscriptionStatus: { type: String, default: 'free' },
+  subscriptionStatus: { type: String, default: "inactive" },
   googleId: { type: String, required: false },
 });
 
